# file-indexer

./: .gitignore  .pre-commit-config.yaml  API_INTEGRATION_GUIDE.md  DOCUMENTATION_UPDATES.md  ISSUE_35_ANALYSIS.md  README.md  example_usage.py  file_indexer.py  package-lock.json  pyproject.toml  requirements.txt  test_fix.py
.github/workflows/: ci.yml  go-ci.yml  go.yml  ruff.yml
api_backend/: .gitignore  Dockerfile  PAGINATION_FEATURES.md  README.md  TEST_FIXES.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
api_backend/examples/: __init__.py  api_client_demo.py
api_backend/file_indexer_api/: __init__.py  database.py  main.py  models.py  routers.py
api_backend/tests/: __init__.py  test_api.py
examples/: cleanup_demo.py  example_usage.py
file_indexer/: __init__.py  __main__.py  cli.py  indexer.py  utils.py
file_indexer_go/: Dockerfile  Makefile  README.md  db1.db.wal  example.sh  examples.go  file-indexer  file_index.db  file_index.json  go.mod  go.sum  main.go
file_indexer_go/checksum/: checksum.go
file_indexer_go/cmd/: checksum_util.go  cli.go  main.go
file_indexer_go/cmd_checksum/: main.go
file_indexer_go/db/: database.go
file_indexer_go/indexer/: checksum.go  checksum_parallel.go  indexer.go
file_indexer_go/models/: file_info.go
file_indexer_go/test_files/: script.py  test1.txt  test2.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Analytics.tsx  Dashboard.tsx  Duplicates.tsx  Layout.tsx  SearchFiles.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts
tests/: test_cli.py  test_indexer.py  test_main.py  test_utils.py
